[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-debt-py"
version = "0.1.0"
description = "Pure-Python functions for sovereign debt analysis (PyXLL-free mirror of sovereign-debt-xl)"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "statsmodels",
    "scikit-learn",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sovereign_debt_py*"]
